--- a/rsrcs/io_inputs/app/config/web_pages/home.html
+++ b/rsrcs/io_inputs/app/config/web_pages/home.html
@@ -29,7 +29,7 @@
         - 'module' scripts: 'https://neerajdana.medium.com/understanding-type-module-in-javascript-a-comprehensive-guide-ebb13926da7a'.
         - 'module' vs. 'non-module' scripts: 'https://neerajdana.medium.com/understanding-type-module-in-javascript-a-comprehensive-guide-ebb13926da7a'.
         -->
-        <script type="module" src="./home-loading_splashscreen_(app).js"></script>
+        <!-- <script type="module" src="./home-loading_splashscreen_(app).js"></script> -->
         <!-- Fallback call to PyScript script to trigger 'py:ready' event, in case there are no PyScript scripts in the page. -->
         <script type="py" defer></script>
     </head>
@@ -69,5 +69,8 @@
                 </ul>
             </section>
         </main>
+        <footer class="footer">
+            <p>Desarrollado por: a1t0ghb | <a href="https://github.com/a1t0ghb" target="_blank">https://github.com/a1t0ghb</a> | <a href="mailto:js101@a1t0.aleeas.com" target="_blank">js101@a1t0.aleeas.com</a></p>
+        </footer>
     </body>
 </html>
