--- a/rsrcs/io_inputs/app/config/web_pages/hello_world.html
+++ b/rsrcs/io_inputs/app/config/web_pages/hello_world.html
@@ -147,5 +147,8 @@
                 <br>
             </section>
         </main>
+        <footer class="footer">
+            <p>Desarrollado por: a1t0ghb | <a href="https://github.com/a1t0ghb" target="_blank">https://github.com/a1t0ghb</a> | <a href="mailto:js101@a1t0.aleeas.com" target="_blank">js101@a1t0.aleeas.com</a></p>
+        </footer>
     </body>
 </html>
