--- a/rsrcs/io_inputs/app/config/web_pages/home.html
+++ b/rsrcs/io_inputs/app/config/web_pages/home.html
@@ -31,7 +31,7 @@
         -->
         <!-- <script type="module" src="./home-loading_splashscreen_(app).js"></script> -->
         <!-- Fallback call to PyScript script to trigger 'py:ready' event, in case there are no PyScript scripts in the page. -->
-        <script type="py" defer></script>
+        <!-- <script type="py" defer></script> -->
     </head>
     <body>
         <!-- Main dialog (as 'modal', defined in js module '_app-loading_splashscreen.js'), what appears 1st as soon as web page is loaded. -->
