doc: updated 'README.md'.

--- a/rsrcs/io_inputs/app/config/web_pages/home.html
+++ b/rsrcs/io_inputs/app/config/web_pages/home.html
@@ -29,9 +29,9 @@
         - 'module' scripts: 'https://neerajdana.medium.com/understanding-type-module-in-javascript-a-comprehensive-guide-ebb13926da7a'.
         - 'module' vs. 'non-module' scripts: 'https://neerajdana.medium.com/understanding-type-module-in-javascript-a-comprehensive-guide-ebb13926da7a'.
         -->
-        <!-- <script type="module" src="./home-loading_splashscreen_(app).js"></script> -->
+        <script type="module" src="./home-loading_splashscreen_(app).js"></script>
         <!-- Fallback call to PyScript script to trigger 'py:ready' event, in case there are no PyScript scripts in the page. -->
-        <!-- <script type="py" defer></script> -->
+        <script type="py" defer></script>
     </head>
     <body>
         <!-- Main dialog (as 'modal', defined in js module '_app-loading_splashscreen.js'), what appears 1st as soon as web page is loaded. -->
