--- a/rsrcs/io_inputs/app/config/web_pages/pandas.html
+++ b/rsrcs/io_inputs/app/config/web_pages/pandas.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!-- Window title. -->
-        <title>PyScript Exercises</title>
+        <title>Pandas | PyScript Exercises</title>
         <!-- Window logo. Goes up x4 folder levels to get to 'media' (rsrcs < io_inputs < app < config < web_pages), where it's stored. -->
         <link rel="icon" type="image/png" href="./../../../../media/icon-favicon.png" />
         <!--
@@ -43,10 +43,10 @@
                 <div class="header-nav-left_aligned">
                     <img class="header-nav-left_aligned-logo" src="./../../../../media/img-logo.png" />
                     <div class="header-nav-left_aligned-links_container">
-                        <a class="header-nav-left_aligned-links_container-link" href="./home.html"><b>HOME</b></a>
+                        <a class="header-nav-left_aligned-links_container-link" href="./home.html">Home</a>
                         <a class="header-nav-left_aligned-links_container-link" href="./hello_world.html">Hello World</a>
                         <a class="header-nav-left_aligned-links_container-link" href="./antigravity.html">Antigravity</a>
-                        <a class="header-nav-left_aligned-links_container-link" href="./pandas.html">Pandas</a>
+                        <a class="header-nav-left_aligned-links_container-link" href="./pandas.html"><b>PANDAS</b></a>
                     </div>
                 </div>
                 <div class="header-nav-links_container">
@@ -60,14 +60,57 @@
         </header>
         <main>
             <section class="main-content">
-                <h1>PyScript Exercises.</h1>
+                <h1>'Pandas' Example.</h1>
+                <p><b>URL for reference</b>: '<a href="https://pyscript.com/@examples/pandas/latest" target="_blank">https://pyscript.com/@examples/pandas/latest</a>'.</p>
                 <br>
-                <p>This is a list of exercises to study <code>PyScript</code>. These exercises come from the <b><a href="https://docs.pyscript.net/2024.5.2/examples/" target="_blank">official PyScript documentation</a></b>, where several examples are listed, starting with basics such as '<a href="https://pyscript.com/@examples/hello-world/latest" target="_blank">Hello World</a>', and digging into <a href="https://pyscript.com/@examples/altair/latest" target="_blank">plotting data</a>.</p>
+                <p>This application uses <code>Pandas</code> to load a CSV file and display the data in a table on the page. It also includes an input field and a button which allows you to change the data to be loaded in the table.</p>
                 <br>
-                <ul>
-                    <li><a class="main-content-list_link" href="./hello_world.html">Hello World</a>: start learing how to use <code>PyScript</code> to run <code>Python</code> in a browser.</li>
-                    <li><a class="main-content-list_link" href="./antigravity.html">Antigravity</a>: import files, using <code>PyScript</code> <a href="https://docs.pyscript.net/2024.5.2/user-guide/configuration/#files" target="_blank"> configuration file (TOML or JSON)</a>.</li>
-                </ul>
+                <hr>
+                <p><b>Validation of 'pyscript.config' parameters.</b></p>
+                <script type="py" defer>
+                    from pyscript import display, config
+                    display(config.get("files"), target="pyscript_output_config_files")
+                    display(config.get("packages"), target="pyscript_output_config_packages")
+                </script>
+                <!-- Use of 'span' element / tag to manipulate text; more specific, as an inline element: 'https://www.freecodecamp.org/news/span-html-how-to-use-the-span-tag-with-css/', 'https://www.w3schools.com/tags/tag_span.asp'. -->
+                <p><b>Config. files</b>: <span id="pyscript_output_config_files" class="main-content-pyscript_output_text"></span></p>
+                <p><b>Config packages</b>: <span id="pyscript_output_config_packages" class="main-content-pyscript_output_text"></span></p>
+                <br>
+                <!-- Message for displaying. Will be set via PyDOM. -->
+                <div id="pyscript_output_page_message" class="main-content-pyscript_output_text"></div>
+                <br>
+                <div>
+                    <h3>Data Source.</h3>
+                    <input type="text" id="input_dataset_url" size="70" />
+                    <button type="submit", id="button_load">Load CSV</button>
+                </div>
+                <br>
+                <!--
+                PyScript Output Section: pandas dataframe.
+                - Initially 'HIDDEN'. Once input url is fetched, setting it's 'display' property to any other different, like DEFAULT of 'block', will make it visible.
+                - References:
+                    - Property 'display': 'https://www.w3schools.com/css/css_display_visibility.asp', 'https://www.w3schools.com/css/tryit.asp?filename=trycss_display_js', 'https://quirksmode.org/css/css2/display.html'.
+                    - Property 'display': block vs. inline. Ref.: 'https://stackoverflow.com/questions/3099030/what-is-the-difference-between-displayinline-and-displayblock/3099045#3099045', 'https://stackoverflow.com/questions/8969381/what-is-the-difference-between-display-inline-and-display-inline-block/14033814#14033814'.
+                    - FLEX vs Block, Inline, and Inline-Block Explained: 'https://blog.devgenius.io/css-display-flex-vs-block-inline-and-inline-block-explained-5fa588a3a960'.
+                    - HTML elements: block vs inline. Ref.: 'https://www.w3schools.com/html/html_blocks.asp'.
+                -->
+                <div id="pyscript_output_dataset_section" hidden>
+                    <h3>Output.</h3>
+                    <div id="pyscript_output_dataset_table" class="main-content-pyscript_output_text"></div>
+                </div>
+                <br>
+                <!--
+                PyScript Output Section: pandas dataframe.
+                - Initially 'HIDDEN'. Once input url is fetched, setting it's 'display' property to any other different, like DEFAULT of 'block', will make it visible.
+                -->
+                <div id="pyscript_output_console_log_section" hidden>
+                    <h3>Dev. Console.</h3>
+                    <script type="py" terminal target="pyscript_output_console_log_output" defer></script>
+                    <div id="pyscript_output_console_log_output"></div>
+                </div>
+                <br>
+                <script type="py" src="./../imports/pandas_launcher.py" config="./../imports/pandas_launcher-pyscript.json" defer></script>
+                <!-- Previous script, generates HERE (empty): '<script-py id="py-2"></script-py>' -->
             </section>
         </main>
         <footer class="footer">
