--- a/rsrcs/io_inputs/app/config/web_pages/02/hello_world.html
+++ b/rsrcs/io_inputs/app/config/web_pages/02/hello_world.html
@@ -69,8 +69,8 @@
                 <!-- Display content: 'https://docs.pyscript.net/2024.5.2/user-guide/builtins/#pyscriptdisplay'. -->
                 <h2>Using 'pyscript.display': default (i.e. 'append=True') vs. 'append=False'.</h2>
                 <ul>
-                    <li><b>Default</b>: encapsulates the result from 'pyscript.display' between a 'div' tag. Then the 'div' gets ADDED to the inner content of the target DOM element.</li>
-                    <li><b>'append=False'</b>: the result from 'pyscript.display' RE-WRITES WHATEVER previous inner content of the target DOM.</li>
+                    <li><p><b>Default</b>: encapsulates the result from 'pyscript.display' between a 'div' tag. Then the 'div' gets ADDED to the inner content of the target DOM element.</p></li>
+                    <li><p><b>'append=False'</b>: the result from 'pyscript.display' RE-WRITES WHATEVER previous inner content of the target DOM.</p></li>
                 </ul>
                 <br>
                 <p><b>IMPORTANT</b>: whenever as possible, create an html element (and include an id) to populate with the result of 'pyscript.display' by using the 'target=' parameter / property. Otherwise, <b>un-expected behaviours</b> can happen, as the one described <i>in the comments of this html</i>.</p>
