--- a/rsrcs/io_inputs/app/config/web_pages/03/antigravity.html
+++ b/rsrcs/io_inputs/app/config/web_pages/03/antigravity.html
@@ -68,7 +68,7 @@
                 <p>It also shows you how you can import a file and use it in your Pyscript application - have a look at <code>pyscript.toml</code> to see how it's done.</p>
                 <br>
                 <hr>
-                <p><b>Validation of 'pyscript.config' parameters.</b></p>
+                <h2>Validation of 'pyscript.config' parameters.</h2>
                 <script type="py" defer>
                     from pyscript import display, config
                     display(config.get("files"), target="pyscript_output_config_files")
