--- a/rsrcs/io_inputs/app/config/web_pages/04/pandas.html
+++ b/rsrcs/io_inputs/app/config/web_pages/04/pandas.html
@@ -66,7 +66,7 @@
                 <p>This application uses <code>Pandas</code> to load a CSV file and display the data in a table on the page. It also includes an input field and a button which allows you to change the data to be loaded in the table.</p>
                 <br>
                 <hr>
-                <p><b>Validation of 'pyscript.config' parameters.</b></p>
+                <h2>Validation of 'pyscript.config' parameters.</h2>
                 <script type="py" defer>
                     from pyscript import display, config
                     display(config.get("files"), target="pyscript_output_config_files")
