refactor: added copyright to footer.

--- a/rsrcs/io_inputs/app/config/web_pages/04/pandas.html
+++ b/rsrcs/io_inputs/app/config/web_pages/04/pandas.html
@@ -115,6 +115,7 @@
         </main>
         <footer class="footer">
             <p>Developed by: a1t0ghb | <a href="https://github.com/a1t0ghb" target="_blank">https://github.com/a1t0ghb</a> | <a href="mailto:js101@a1t0.aleeas.com" target="_blank">js101@a1t0.aleeas.com</a></p>
+            <small>&copy; 2025 a1t0ghb. All rights reserved.</small>
         </footer>
     </body>
 </html>
